[tool.poetry]
name = "playlists"
version = "0.1.0"
description = "A playlists app with pybald and graphql"
authors = ["Allison Browne <allison-browne@pluralsight.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
pybald = "^0.5.1"
alembic = "*"
celery = "*"
graphene-sqlalchemy = "*"
psycopg2 = "*"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
autoenv = "*"
pytest = "*"
